@@ -9167,6 +9167,11 @@ void Client::CompleteConnect()
 					AddDefensiveProc(GetProcID(buffs[j1].spellid, x1), 100+spells[buffs[j1].spellid].base2[x1],buffs[j1].spellid);
 					break;
 					}
+				case SE_RangedProc:
+					{
+					AddRangedProc(GetProcID(buffs[j1].spellid, x1), 100+spells[buffs[j1].spellid].base2[x1],buffs[j1].spellid);
+					break;
+					}
 				case SE_SkillProc2:
 				case SE_SkillProc:
 					{
